--- a/src/main/resources/templates/admin/usuario/cadastro-form.html
+++ b/src/main/resources/templates/admin/usuario/cadastro-form.html
@@ -12,11 +12,14 @@
               <div class="card-title">Cadastro de Usuário</div>
             </div>
             <div class="card-body">
-              <form
-                method="POST"
-                th:object="${cadastroForm}"
-                autocomplete="off"
+              <form method="POST" th:object="${cadastroForm}" autocomplete="off"
               >
+                <input
+                  type="hidden"
+                  th:name="${_csrf.parameterName}"
+                  th:value="${_csrf.token}"
+                />
+
                 <div class="row">
                   <div class="col">
                     <div class="form-group">
