--- a/src/main/resources/templates/admin/usuario/edicao-form.html
+++ b/src/main/resources/templates/admin/usuario/edicao-form.html
@@ -13,6 +13,11 @@
             </div>
             <div class="card-body">
               <form method="POST" th:object="${edicaoForm}" autocomplete="off">
+                <input
+                  type="hidden"
+                  th:name="${_csrf.parameterName}"
+                  th:value="${_csrf.token}"
+                />
                 <div class="row">
                   <div class="col">
                     <div class="form-group">
